# MyWeChat

./: .gitignore
ChatServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  ChatGrpcClient.cpp  LogicSystem.h  MysqlConPool.cpp  MysqlConPool.h  MysqlDao.cpp  MysqlMgr.h  RedisMgr.cpp  Session.h  Singleton.h  StatusGrpcClient.h  UserMgr.cpp  UserMgr.h  main.cpp
ChatServer2/: CMakeLists.txt  ChatGrpcClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.h  LogicSystem.cpp  MsgNode.cpp  MsgNode.h  MysqlDao.h  MysqlMgr.cpp  RedisMgr.h  Server.cpp  Server.h  Session.cpp  StatusGrpcClient.cpp  const.h  data.h
GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlConPool.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  const.h
StatusServer/: CMakeLists.txt  ConfigMgr.cpp  MysqlDao.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusServer.h  StatusServerServiceImpl.cpp  StatusServerServiceImpl.h  const.h  main.cpp  message.proto
